Lets throw an update at it

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: RITPagans
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here.
+  Rochester Institute of Technology - Pagan "Club" / student life thing.
 url: "http://ritpagans.com" # the base hostname & protocol for your site
 plugins:
   - jekyll-sitemap
